Fix process and artifact sidebar and table scrollbar

--- a/sedos_dashboard/static/css/layout/_process.scss
+++ b/sedos_dashboard/static/css/layout/_process.scss
@@ -27,8 +27,9 @@
     flex: 1;
     border: 1px solid $neutral-200;
     border-radius: $radius;
-    padding: 1.75rem;
+    padding: 1.75rem 1.75rem 1.75rem 0;
     margin-bottom: 2rem;
+    min-width: 26rem;
     max-width: 38rem;
     height: calc(100vh - 22rem);
     overflow: overlay;
@@ -50,7 +51,7 @@
   }
 
   &__graph {
-    flex: 1;
+    overflow-x: auto;
 
     .nav-tabs button {
       font-size: $font-size-md;
